add all topic commnets #4

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,5 +10,10 @@
   <%= @topic.content %>
 </p>
 
+<h2>Comments</h2>
+  <div id="comments">
+    <%= render @topic.comments %>
+  </div>
+
 <%= link_to 'Edit', edit_topic_path(@topic) %> |
 <%= link_to 'Back', topics_path %>
