--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -15,5 +15,7 @@
     <%= render @topic.comments %>
   </div>
 
+<%= render 'comments/new', topic: @topic %> 
+
 <%= link_to 'Edit', edit_topic_path(@topic) %> |
 <%= link_to 'Back', topics_path %>
