using trix in topics#new #10

--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -18,7 +18,8 @@
 
   <div class="field">
     <%= form.label :content %>
-    <%= form.text_area :content %>
+    <%= form.hidden_field :content, id: :topic_text %>
+    <trix-editor input="topic_text"></trix-editor>
   </div>
 
   <div class="actions">
