--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,5 +1,6 @@
 <%= form_with(model: [ @topic, Comment.new ], remote: true) do |form| %>
     Your Comment:<br>
-    <%= form.text_area :content, size: '50x20' %><br>
+    <%= form.hidden_field :content, id: :topic_comments %>
+    <trix-editor input="topic_comments"></trix-editor>
     <%= form.submit %>
 <% end %> 
