--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Category</th>
       <th>Content</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +16,7 @@
     <% @topics.each do |topic| %>
       <tr>
         <td><%= topic.title %></td>
+        <td><%= topic.category %></td>
         <td><%= sanitize topic.content, tags: %w(h1 h2 h3 h4 h5 h6 ul ol li p a img table tr td em br strong div), attributes:  %w(id class href) %></td>
         <td><%= link_to 'Show', topic %></td>
         <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
