--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,3 @@
 <p><%= sanitize comment.content, tags: %w(h1 h2 h3 h4 h5 h6 ul ol li p a img table tr td em br strong div), attributes:  %w(id class href) %></p>
-<p><%= link_to "Delete", "#{comment.topic_id}/comments/#{comment.id}", method: :delete, data: { confirm: 'Are you sure?' } %> 
+<p><%= link_to "Delete", topic_comment_path(@topic, comment), method: :delete, data: { confirm: 'Are you sure?' } %> 
 <p><%= link_to "Edit", edit_topic_comment_path(@topic, comment) %></p>
