add link to categoris #39

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,7 @@
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <%= link_to 'Topics', topics_path, class: "dropdown-item" %>
+        <%= link_to 'Category', categories_path, class: "dropdown-item" %>
       </div>
     </div>
 </nav>
