--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,7 @@
 <%= User.find(comment.user_id).name %>
 <%= image_tag(User.find(comment.user_id).icon, :size => "40x40")%>
 <p><%= sanitize comment.content, tags: %w(h1 h2 h3 h4 h5 h6 ul ol li p a img table tr td em br strong div), attributes:  %w(id class href) %></p>
+<% if user_signed_in? && comment.user_id == current_user.id %>
 <p><%= link_to "Delete", topic_comment_path(@topic, comment), method: :delete, data: { confirm: 'Are you sure?' } %> 
 <p><%= link_to "Edit", edit_topic_comment_path(@topic, comment) %></p>
+<% end %>
