--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,4 +15,10 @@
         <% end %>
       </div>
     </div>
+    <div class="form-inline my-2 my-lg-0">
+      <%= search_form_for @search, url: '/search'  do |f| %>
+        <%= f.text_field :content_cont, class: "form-control mr-sm-2" %>
+        <%= f.submit ("Search") , class: 'btn btn-outline-success my-2 my-sm-0'%>
+      <% end %>
+    </div>
 </nav>
